# s1-gw-ns

./: .gitignore  README.md  docker-compose.yml  go.mod  go.sum
results/: e1-100ms.csv  e1-10ms.csv  e1-1s.csv  pyproject.toml
results/e1/: config.yml  main.ipynb  main.py  ms1.csv  ms10.csv  ms100.csv  ms15.csv  s1.csv
results/e2/: config.yml  main.py  ms1.csv  ms10.csv  ms100.csv  ms15.csv  ms30.csv  s1.csv
results/e3/: main.py  ms10.csv  ms100.csv  s1.csv
results/e4/: config.yml  main.py  ms100_1.csv  ms100_10.csv  ms100_2.csv  ms100_3.csv  ms100_4.csv  ms100_5.csv  ms100_6.csv  ms100_7.csv  ms100_8.csv  ms100_9.csv  ms500_1.csv  ms500_10.csv  ms500_2.csv  ms500_3.csv  ms500_4.csv  ms500_5.csv  ms500_6.csv  ms500_7.csv  ms500_8.csv  ms500_9.csv  s10_1.csv  s10_10.csv  s10_2.csv  s10_3.csv  s10_4.csv  s10_5.csv  s10_6.csv  s10_7.csv  s10_8.csv  s10_9.csv  s1_1.csv  s1_10.csv  s1_2.csv  s1_3.csv  s1_4.csv  s1_5.csv  s1_6.csv  s1_7.csv  (+2 more)
results/e5/: main.py  n100_1.csv  n100_10.csv  n100_2.csv  n100_3.csv  n100_4.csv  n100_5.csv  n100_6.csv  n100_7.csv  n100_8.csv  n100_9.csv  n10_1.csv  n10_10.csv  n10_2.csv  n10_3.csv  n10_4.csv  n10_5.csv  n10_6.csv  n10_7.csv  n10_8.csv  n10_9.csv  n1_1.csv  n1_10.csv  n1_2.csv  n1_3.csv  n1_4.csv  n1_5.csv  n1_6.csv  n1_7.csv  n1_8.csv  n1_9.csv  n20_1.csv  n20_10.csv  n20_2.csv  n20_3.csv  n20_4.csv  n20_5.csv  n20_6.csv  n20_7.csv  n20_8.csv  (+11 more)
results/e6/: g10_1.csv  g10_10.csv  g10_2.csv  g10_3.csv  g10_4.csv  g10_5.csv  g10_6.csv  g10_7.csv  g10_8.csv  g10_9.csv  g1_1.csv  g1_10.csv  g1_2.csv  (+28 more)
s1-gw-ns/: pyproject.toml
(+187 files in other folders)
